<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_news"
            android:name="com.softhouse.workingout.ui.news.NewsList"
            android:label="@string/title_news"
            tools:layout="@layout/fragment_news">
        <action
                android:id="@+id/action_navigation_news_to_webFragment"
                app:destination="@id/webFragment"
                app:enterAnim="@anim/fragment_fade_enter"
                app:exitAnim="@anim/fragment_fade_exit"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@animator/nav_default_pop_exit_anim"
                >
            <argument
                    android:name="url"
                    android:defaultValue="https://google.com"/>
        </action>
    </fragment>

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.softhouse.workingout.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="com.softhouse.workingout.ui.dashboard.DashboardFragment"
            android:label="@string/title_dashboard"
            tools:layout="@layout/fragment_dashboard"/>

    <fragment
            android:id="@+id/navigation_notifications"
            android:name="com.softhouse.workingout.ui.notifications.NotificationsFragment"
            android:label="@string/title_notifications"
            tools:layout="@layout/fragment_notifications"/>
    <fragment
            android:id="@+id/webFragment"
            android:name="com.softhouse.workingout.ui.news.WebFragment"
            android:label="@string/web_news"
            tools:layout="@layout/fragment_web">
        <argument
                android:name="url"
                app:argType="string"/>
    </fragment>


</navigation>